# bam2cram-check

./: .coveragerc  .travis.yml  README.md  compare_bam2cram.py  main.py  requirements.txt  run_batch.sh  setup.cfg  setup.py  stats_checks.py  test_requirements.txt  tests.py  tox.ini  utils.py
checks/: __init__.py  main.py  stats_checks.py  utils.py
scripts/: install-samtools.sh
tests/: __init__.py  test_stats_checks.py  test_utils.py
tests/test-cases/: 1read.2.cram  1read.cram  bad_file  ce#5b.bam  ce#5b.cram  mpileup.3.0.cram  mpileup.3.rev.bam  mpileup.3.rev.crai
tests/test-cases/diff_stats/: mpileup.1.bam.stats  mpileup.1.ok.crai  mpileup.1.ok.cram  mpileup.3.cram.stats  readme.txt
tests/test-cases/fail_quickcheck/: c1#ID.bam  c1#clip.bam
tests/test-cases/ok_bam_cram/: mpileup.3.bai  mpileup.3.bam.stats  mpileup.3.crai  mpileup.3.cram  mpileup.3.cram.stats
tests/test-cases/stats_ok/: WES_CME5394996.bam.cram.stats  WES_CME5394996.bam.stats  WES_CME5400658.bam.cram.stats  WES_CME5400658.bam.stats
