[metadata]
name = bam2cram-check
author = Irina Colgiu
author-email = ic4@sanger.ac.uk
summary = Package to check the coversion between BAM and CRAM format based on stats.
license = GPL
description-file = README.md
requires-python = 3.5
classifier =
Development Status :: 1 - Alpha
Environment :: Console
Intended Audience :: Developers
Operating System :: OS Independent
Programming Language :: Python
[files]
packages =
	checks
